moved static files to their custom folder

--- a/multiupload/templates/multiupload/upload.html
+++ b/multiupload/templates/multiupload/upload.html
@@ -10,21 +10,24 @@
 {% url 'admin:jsi18n' as jsi18nurl %}
   <script type="text/javascript" src="{{ jsi18nurl|default:"../../../jsi18n/" }}"></script>
 {{ media }}
-  <script type="text/javascript" src="{{ STATIC_URL }}bootstrap/js/bootstrap.min.js" /></script>
+  <script type="text/javascript" src="{{ STATIC_URL }}bootstrap/js/bootstrap.min.js" ></script>
 
-<script src="{{ STATIC_URL }}jquery/jquery.1.8.0.min.js"></script>
-<script src="{{ STATIC_URL }}jquery/jquery.ui.widget.js"></script>
-<script src="{{ STATIC_URL }}jquery/tmpl.min.js"></script>
-<script src="{{ STATIC_URL }}jquery/load-image.min.js"></script>
-<script src="{{ STATIC_URL }}jquery/canvas-to-blob.min.js"></script>
-<script src="{{ STATIC_URL }}jquery/bootstrap.min.js"></script>
-<script src="{{ STATIC_URL }}jquery/bootstrap-image-gallery.min.js"></script>
-<script src="{{ STATIC_URL }}jquery/jquery.iframe-transport.js"></script>
-<script src="{{ STATIC_URL }}jquery/jquery.fileupload.js"></script>
-<script src="{{ STATIC_URL }}jquery/jquery.fileupload-fp.js"></script>
-<script src="{{ STATIC_URL }}jquery/jquery.fileupload-ui.js"></script>
+<script src="{{ STATIC_URL }}jmultiupload/query/jquery.1.8.0.min.js"></script>
+<script src="{{ STATIC_URL }}jmultiupload/query/jquery.ui.widget.js"></script>
+<script src="{{ STATIC_URL }}jmultiupload/query/tmpl.min.js"></script>
+<script src="{{ STATIC_URL }}jmultiupload/query/load-image.min.js"></script>
+<script src="{{ STATIC_URL }}jmultiupload/query/canvas-to-blob.min.js"></script>
+<script src="{{ STATIC_URL }}jmultiupload/query/bootstrap.min.js"></script>
+<script src="{{ STATIC_URL }}jmultiupload/query/bootstrap-image-gallery.min.js"></script>
+<script src="{{ STATIC_URL }}jmultiupload/query/jquery.iframe-transport.js"></script>
+<script src="{{ STATIC_URL }}jmultiupload/query/jquery.fileupload.js"></script>
+<script src="{{ STATIC_URL }}jmultiupload/query/jquery.fileupload-fp.js"></script>
+<script src="{{ STATIC_URL }}jmultiupload/query/jquery.fileupload-ui.js"></script>
+
+
+        )
 <!-- The XDomainRequest Transport is included for cross-domain file deletion for IE8+ -->
-<!--[if gte IE 8]><script src="{{ STATIC_URL }}jquery/jquery.xdr-transport.js"></script><![endif]-->
+<!--[if gte IE 8]><script src="{{ STATIC_URL }}jmultiupload/query/jquery.xdr-transport.js"></script><![endif]-->
 
 {% endblock %}
 
